sending messages between wear and phone and basic 4sq api integration

--- a/mobile/src/main/res/layout/activity_phone.xml
+++ b/mobile/src/main/res/layout/activity_phone.xml
@@ -9,7 +9,8 @@
     tools:context=".PhoneActivity">
 
     <TextView
-        android:text="@string/hello_world"
+        android:text="Waiting for message"
+        android:id="@+id/test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
