--- a/wear/src/main/res/layout/rect_activity_check_in.xml
+++ b/wear/src/main/res/layout/rect_activity_check_in.xml
@@ -11,5 +11,5 @@
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_square" />
+        android:text="Sending message ..." />
 </LinearLayout>
