--- a/wear/src/main/res/layout/list_item_check_in.xml
+++ b/wear/src/main/res/layout/list_item_check_in.xml
@@ -8,9 +8,8 @@
         android:layout_height="52dp"
         android:layout_marginLeft="16dp"
         android:layout_width="52dp"
-        app:circle_border_color="#FFFFFFFF"
-        app:circle_border_width="2dp"
-        app:circle_color="#00000000"
+        app:circle_border_width="0dp"
+        app:circle_color="@color/selected"
         />
 
     <TextView
@@ -22,7 +21,7 @@
         android:layout_marginLeft="72dp"
         android:layout_marginRight="16dp"
         android:layout_width="wrap_content"
-        android:textColor="@color/white"
-        android:textSize="14sp"
+        android:textColor="@color/black"
+        android:textSize="15sp"
         />
 </merge>
