--- a/wear/src/main/res/layout/activity_check_in.xml
+++ b/wear/src/main/res/layout/activity_check_in.xml
@@ -15,6 +15,14 @@
         android:id="@+id/progress"
         android:indeterminate="true"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:textColor="@android:color/primary_text_light"
+        android:padding="@dimen/dismiss_padding"
+        android:id="@+id/error"/>
+
     <android.support.wearable.view.WearableListView
         android:id="@+id/list"
         android:layout_width="match_parent"
