--- a/wear/src/main/res/values/dimens.xml
+++ b/wear/src/main/res/values/dimens.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <dimen name="default_settings_circle_radius">18dp</dimen>
     <dimen name="selected_settings_circle_radius">24dp</dimen>
     <dimen name="round_side_inset">32dp</dimen>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- delayed confirmation -->
+    <dimen name="circle_border_normal_width">5dp</dimen>
+    <dimen name="circle_padding">5dp</dimen>
+    <dimen name="circle_radius">40dp</dimen>
+    <dimen name="circle_radius_pressed">35dp</dimen>
 </resources>
