--- a/wear/src/main/res/layout/activity_check_in_list.xml
+++ b/wear/src/main/res/layout/activity_check_in_list.xml
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:fontFamily="sans-serif-condensed-light"
         android:textColor="@android:color/primary_text_light"
         android:padding="@dimen/dismiss_padding"
         android:id="@+id/error"/>
