--- a/wear/src/main/res/layout/list_item_check_in.xml
+++ b/wear/src/main/res/layout/list_item_check_in.xml
@@ -21,7 +21,7 @@
         android:maxLines="2"
         android:layout_marginLeft="72dp"
         android:layout_marginRight="16dp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:textColor="@color/black"
         android:textSize="15sp"
         />
