--- a/wear/src/main/res/layout/activity_progress.xml
+++ b/wear/src/main/res/layout/activity_progress.xml
@@ -1,19 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:background="@color/white"
-              android:id="@+id/container"
-              tools:context=".MyActivity"
-              tools:deviceIds="wear">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:background="@color/white"
+                android:id="@+id/container"
+                tools:context=".MyActivity"
+                tools:deviceIds="wear">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/main"/>
 
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:id="@+id/progress"
+        android:indeterminate="true"/>
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:padding="8dp"
+        style="@android:style/Widget.Holo.ProgressBar.Small"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/small_progress"
         android:indeterminate="true"/>
 
     <TextView
@@ -24,6 +39,4 @@
         android:textColor="@android:color/primary_text_light"
         android:padding="@dimen/dismiss_padding"
         android:id="@+id/error"/>
-
-    <!-- place for main view -->
 </RelativeLayout>
