license, comments, code review, android lint

--- a/wear/src/main/res/layout/list_item_check_in.xml
+++ b/wear/src/main/res/layout/list_item_check_in.xml
@@ -6,7 +6,7 @@
         android:id="@+id/image"
         android:alpha="0.5"
         android:layout_height="52dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_width="52dp"
         app:circle_border_width="0dp"
         app:circle_color="@color/brand"
@@ -19,8 +19,8 @@
         android:gravity="center_vertical"
         android:layout_height="52dp"
         android:maxLines="2"
-        android:layout_marginLeft="72dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginEnd="16dp"
         android:layout_width="match_parent"
         android:textColor="@color/black"
         android:textSize="15sp"
