--- a/mobile/src/main/res/layout/activity_phone.xml
+++ b/mobile/src/main/res/layout/activity_phone.xml
@@ -64,6 +64,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:contentDescription="@string/desc_check_in_by_voice"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
@@ -76,6 +77,7 @@
                     android:text="@string/or"/>
 
                 <ImageView
+                    android:contentDescription="@string/desc_check_in_by_launcher"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
@@ -99,6 +101,7 @@
                 <ImageView
                     android:layout_width="0dp"
                     android:layout_weight="1"
+                    android:contentDescription="@string/desc_explore_by_voice"
                     android:layout_height="wrap_content"
                     android:src="@drawable/guide_explore_voice"/>
 
@@ -109,6 +112,7 @@
                     android:text="@string/or"/>
 
                 <ImageView
+                    android:contentDescription="@string/desc_explore_by_launcher"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
