--- a/wear/src/main/res/layout/activity_check_in.xml
+++ b/wear/src/main/res/layout/activity_check_in.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     android:padding="8dp"
-    android:gravity="center"
-    android:background="@color/white">
+    android:gravity="center">
 
     <TextView
         android:layout_width="wrap_content"
@@ -41,7 +41,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="2dp"
             android:textSize="15sp"
             android:fontFamily="sans-serif-condensed-light"
             android:textColor="@color/medium_gray"
