--- a/mobile/src/main/res/menu/main.xml
+++ b/mobile/src/main/res/menu/main.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item
+        android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        android:showAsAction="never" />
+
     <item
         android:id="@+id/action_logout"
         android:title="@string/logout"
