--- a/wear/src/main/res/layout/fragment_action.xml
+++ b/wear/src/main/res/layout/fragment_action.xml
@@ -1,20 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
-              android:paddingLeft="16dp"
-              android:paddingRight="16dp"
-              android:paddingTop="24dp"
-              android:paddingBottom="12dp"
               android:layout_width="match_parent"
+              tools:background="@color/black"
               android:layout_height="match_parent">
 
     <android.support.wearable.view.CircledImageView
         android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
         tools:src="@drawable/ic_full_cancel"
         app:circle_color="@color/action_button"
         app:circle_radius="52dp"
@@ -22,12 +18,14 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
+        android:paddingTop="10dp"
         tools:text="Cancel"
         android:id="@+id/label"
+        android:layout_below="@id/icon"
         android:fontFamily="sans-serif-condensed-light"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textColor="@color/white"/>
 
-</LinearLayout>
+</RelativeLayout>
