Update to AS 1.0 and latest dependencies

--- a/wear/src/main/res/layout/list_item_check_in.xml
+++ b/wear/src/main/res/layout/list_item_check_in.xml
@@ -10,6 +10,7 @@
         android:layout_width="52dp"
         app:circle_border_width="0dp"
         app:circle_color="@color/brand"
+        app:circle_radius="24dp"
         />
 
     <TextView
