More material goodness, simplification, dots indicator

--- a/mobile/src/main/res/layout/activity_phone.xml
+++ b/mobile/src/main/res/layout/activity_phone.xml
@@ -33,9 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/foursquare_button"
-                android:text="@string/connect_to_4sq"
-                android:textColor="@color/white"
-                android:background="@drawable/btn_blue"/>
+                android:text="@string/connect_to_4sq"/>
         </LinearLayout>
 
         <LinearLayout
