--- a/wear/src/main/res/layout/activity_check_in.xml
+++ b/wear/src/main/res/layout/activity_check_in.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@color/white"
+        android:background="@color/black"
         app:layout_box="left|right"
         android:padding="8dp"
         android:gravity="center">
@@ -19,7 +19,7 @@
             android:id="@+id/name"
             android:fontFamily="sans-serif-condensed-light"
             android:textSize="20sp"
-            android:textColor="@color/black"/>
+            android:textColor="@android:color/primary_text_dark"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_cancel"
-                app:circle_color="@color/primary"
+                app:circle_color="@color/action_button"
                 app:circle_radius="@dimen/circle_radius"
                 app:circle_radius_pressed="@dimen/circle_radius_pressed"
                 app:circle_padding="@dimen/circle_padding"
@@ -49,7 +49,7 @@
                 android:textSize="15sp"
                 android:id="@+id/checking_in"
                 android:fontFamily="sans-serif-condensed-light"
-                android:textColor="@color/medium_gray"
+                android:textColor="@android:color/secondary_text_dark"
                 android:text="@string/checking_in"/>
         </LinearLayout>
 
