--- a/wear/src/main/res/layout/list_item_check_in.xml
+++ b/wear/src/main/res/layout/list_item_check_in.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-       xmlns:app="http://schemas.android.com/apk/res-auto">
+       xmlns:app="http://schemas.android.com/apk/res-auto"
+       xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.wearable.view.CircledImageView
         android:id="@+id/image"
@@ -9,8 +10,9 @@
         android:layout_marginStart="16dp"
         android:layout_width="52dp"
         app:circle_border_width="0dp"
-        app:circle_color="@color/primary"
+        app:circle_color="@color/action_button"
         app:circle_radius="24dp"
+        app:circle_radius_pressed="20dp"
         />
 
     <TextView
@@ -23,7 +25,8 @@
         android:layout_marginStart="72dp"
         android:layout_marginEnd="16dp"
         android:layout_width="match_parent"
-        android:textColor="@color/black"
+        tools:text="U Destila"
+        android:textColor="@android:color/primary_text_dark"
         android:textSize="15sp"
         />
 </merge>
