--- a/wear/src/main/res/values/dimens.xml
+++ b/wear/src/main/res/values/dimens.xml
@@ -6,4 +6,10 @@
     <dimen name="circle_padding">5dp</dimen>
     <dimen name="circle_radius">40dp</dimen>
     <dimen name="circle_radius_pressed">35dp</dimen>
+
+    <!-- gridviewpager -->
+    <dimen name="page_row_margin">100dp</dimen>
+    <dimen name="page_column_margin">10dp</dimen>
+    <dimen name="page_column_margin_round">50dp</dimen>
+    <dimen name="card_margin_bottom">3dp</dimen>
 </resources>
