--- a/mobile/src/main/res/menu/main.xml
+++ b/mobile/src/main/res/menu/main.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_logout"
         android:title="@string/logout"
-        android:showAsAction="never"/>
+        app:showAsAction="never"/>
 </menu>
